# python-cli-app-template

./: .editorconfig  .gitattributes  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.pca.toml.sample  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  settings.pca.toml
.github/: dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: 0-feature-request.md  config.yml
.github/workflows/: build-documentation.yml  build.yml  documentation.yml  labeler.yml  maintain-labels.yml  pull-request-labeler.yml  release-drafter.yml  tests.yml
docs/: contributing.md  index.md  requirements.txt
docs/snippets/: links.txt
notebooks/: template.ipynb
src/python_cli_app_template/: __init__.py  cli.py  cli_factorial.py  cli_fibonacci.py  config.py  fibonacci.py  geo.py
src/python_cli_app_template/cli/: config.py  factorial.py  fetch.py  geo.py  main.py  prime.py
src/python_cli_app_template/config/: settings.pce.toml
src/python_cli_app_template/defaults/: .secrets.pca.toml
src/python_cli_app_template/geodata/: gpw_v4_population_density_rev11_2020_2pt5_min.asc  gpw_v4_population_density_rev11_2020_30_min.asc
tests/: __init__.py  conftest.py  test_cli.py  test_cli_config.py  test_fibonacci.py
